# libkorean

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  libkorean.pc
data/hanja/: hanja.txt
data/keyboards/: changdok.yaml  kps9256.yaml  kps9256_yetgulja.yaml  romaja.yaml  sebolsik390.yaml  sebolsik_final.yaml  sebolsik_yetgulja.yaml  tubolsik.yaml  tubolsik_yetgulja.yaml
scratch/: trace_preedit.rs
src/: char_utils.rs  ffi.rs  hanja.rs  input_context.rs  keyboard.rs  korean.h  lib.rs
src/engine/: compose.rs  jamo.rs  layout.rs  mod.rs  state.rs
tests/: backspace_order.rs  debug_unicode.rs  integration.rs  multi_syllable_backspace.rs  noble_name.rs  word_unit_commit.rs  yetgulja.rs
